--- a/config/configuration.cfg
+++ b/config/configuration.cfg
@@ -1,12 +1,12 @@
 [CLUSTER]
-HOST='horse-racing.cblkpw4syllo.eu-west-2.redshift.amazonaws.com'
+HOST=''
 DB_NAME=horse_racing
-DB_USER='awsuser'
-DB_PASSWORD='Password1'
-DB_PORT='5439'
+DB_USER=''
+DB_PASSWORD=''
+DB_PORT=''
 
 [IAM_ROLE]
-ARN=arn:aws:iam::718240196138:role/myRedshiftRole
+ARN=
 
 [S3]
 S3_BUCKET_PATH='s3://udacity-horse-racing/data/'
@@ -15,8 +15,8 @@ FILE_TO_RETRIEVE=data/tips_4.json
 OUTPUT_BUCKET='s3://udacity-horse-racing/data/output'
 
 [AWS]
-AWS_ACCESS_KEY_ID=AKIAI76STUJWXAFHOWPQ
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 
 [STAGING_TABLES]
 TABLE_NAMES_LIST=['staging_conditions', 'staging_forms', 'staging_horse_sexes', 'staging_horses', 'staging_markets', 'staging_odds', 'staging_riders', 'staging_runners', 'staging_weather']
